--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Gi-Chang Kim                         # the main title
+title: aki-Chang Kim's Workspace                         # the main title
 
-tagline: a.k.a Panther
+tagline: a.k.a Panther K
 
 description: >
 
@@ -36,7 +36,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Gi-Chang Kim
+  name: Ki-Chang Kim
   email: gckim2617@gmail.com            # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -86,7 +86,7 @@ toc: true
 
 disqus:
   comments: false  # boolean type, the global switch for posts comments.
-  shortname: 'Panther'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  shortname: 'Panther K'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
