--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: aki-Chang Kim's Workspace                         # the main title
+title: ki-Chang Kim's Workspace                         # the main title
 
 tagline: a.k.a Panther K
 
@@ -76,7 +76,7 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: ''
+img_cdn: 'https://ouctlpqdzvne17433410.cdn.ntruss.com'
 
 # the avatar on sidebar, support local or CORS resources
 avatar: https://avatars.githubusercontent.com/u/16862300?v=4
