--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: ki-Chang Kim's Workspace                         # the main title
+title: Ki-Chang Kim's Workspace                         # the main title
 
-tagline: a.k.a Panther K
+tagline: Programming, Life and more
 
 description: >
 
