--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github:
   username: Panther3652             # change to your github username
 
 twitter:
-  username:             # change to your twitter username
+  username:  kckim2617           # change to your twitter username
 
 social:
   # Change to your full name.
@@ -86,7 +86,7 @@ toc: true
 
 disqus:
   comments: false  # boolean type, the global switch for posts comments.
-  shortname: 'Panther K'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  shortname: 'Ki-Chang Kim'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 paginate: 10
 
