--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 'https://ouctlpqdzvne17433410.cdn.ntruss.com'
+# img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
 avatar: https://avatars.githubusercontent.com/u/16862300?v=4
